LWCLearnwithFLOWOrg/force-app/main/default/objects/State__c/fields/Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Abbreviation__c</fullName>
    <description>State or Province abbreviation</description>
    <label>Abbreviation</label>
    <length>5</length>
    <type>Text</type>
</CustomField>