LWCLearnwithFLOWOrg/force-app/main/default/objects/State__c/fields/Account_Territory__c.field-meta.xml
<CustomField>
    <fullName>Account_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Territory</label>
    <referenceTo>Account_Territory__c</referenceTo>
    <relationshipLabel>States</relationshipLabel>
    <relationshipName>State</relationshipName>
    <type>Lookup</type>
</CustomField>