LWCLearnwithFLOWOrg/force-app/main/default/objects/State__c/fields/Number_of_Counties__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Counties__c</fullName>
    <label>Number of Counties</label>
    <summaryForeignKey>County__c.State__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>