LWCLearnwithFLOWOrg/force-app/main/default/objects/State__c/validationRules/Prevent_Delete_County.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Delete_County</fullName>
    <active>true</active>
    <description>Prevents deletion of counties.</description>
    <errorConditionFormula>Number_of_Counties__c &lt;  PRIORVALUE(Number_of_Counties__c)</errorConditionFormula>
    <errorMessage>Deletion of counties is not allowed.</errorMessage>
</ValidationRule>