LWCLearnwithFLOWOrg/force-app/main/default/objects/State__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Abbreviation__c</columns>
    <columns>Account_Territory__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>