LWCLearnwithFLOWOrg/force-app/main/default/objects/State__c/listViews/Canada_Provinces.listView-meta.xml
<ListView>
    <fullName>Canada_Provinces</fullName>
    <columns>NAME</columns>
    <columns>Account_Territory__c</columns>
    <columns>Abbreviation__c</columns>
    <columns>Number_of_Counties__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Canada</value>
    </filters>
    <label>Canada Provinces</label>
</ListView>