LWCLearnwithFLOWOrg/force-app/main/default/objects/State__c/listViews/counties.listView-meta.xml
<ListView>
    <fullName>counties</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>new york</value>
    </filters>
    <label>counties</label>
</ListView>